test/sema/traits/impl_trait_type_param_count_mismatch.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A<T> {
  fn foo();
}

struct S {
  // CHECK: [[# @LINE + 1]]:8: error: type argument count mismatch, expected 1, but received 0
  impl A {
    fn foo() {}
  }

  // CHECK: [[# @LINE + 1]]:8: error: type argument count mismatch, expected 1, but received 2
  impl A<number, unit> {
    fn foo() {}
  }
}

fn main() {}
